--- a/main.css
+++ b/main.css
@@ -1,9 +1,10 @@
 body {
     margin: 0;
     padding: 0;
-    /* overflow: hidden; */
     background-color: #ccc;
     display: flex;
+    flex-direction: column;
+    gap: 16px;
     justify-content: center;
     align-content: center;
     height: 100vh;
@@ -16,7 +17,22 @@ body {
     height: auto;
     width: auto;
     display: flex;
-    /* flex-flow: wrap; */
     justify-content: center;
     flex-direction: column;
+}
+
+#buttonGrid {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 500;
+    color: #fff;
+    border: 0;
+    border-radius: 6px;
+    background-color: #29333f;
+    width: 100px;
+    align-self: center;
+}
+
+#buttonGrid:hover {
+    cursor: pointer;
+    background-color: #536780;
 }
